2005-08-19  Carl Worth  <cworth@cworth.org>

	From Bertram Felgenhauer <int-e@gmx.de>:

	* test/.cvsignore:
	* test/Makefile.am:
	* test/rectangle-rounding-error-ref.png:
	* test/rectangle-rounding-error.c: (draw), (main):
	Add regression test for bug #4137 (fixed earlier).

2005-08-19  Billy Biggs  <vektor@dumbterm.net>

	* test/pixman-rotate.c: No need to include cairo-pdf.h.

2005-08-19  Carl Worth  <cworth@cworth.org>

	Fix for bug #4137:

	* src/cairo-fixed.c: (_cairo_fixed_from_double): Fix to round
	properly.

2005-08-19  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-pdf-surface.c (_cairo_pdf_surface_show_glyphs):
	Ignore really small fonts, since size zero fonts give xpdf
	fits. (#2938)

2005-08-19  Carl Worth  <cworth@cworth.org>

	* src/cairo-font.c: (_cairo_scaled_font_set_error): Fix to
	actually test scaled_font->status instead of just having a comment
	that claims to test it. Thanks to Behdad Esfahbod
	<behdad@cs.toronto.edu>.

2005-08-18  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_composite): We need
	the call to fixup_unbounded when we optimize the RENDER operator
	to XCopyArea as well.

2005-08-19  Carl Worth  <cworth@cworth.org>

	Fixes for a general problem of which bug #4094 was a specific
	instance:

	* src/cairo.c: (_cairo_set_error):
	* src/cairo-font.c: (_cairo_scaled_font_set_error):
	* src/cairo-pattern.c: (_cairo_pattern_set_error):
	* src/cairo-surface.c: (_cairo_surface_set_error):
	Don't change the status value if it already holds an error. This
	avoids destroying "first error" information and also avoids
	attempting to write read-only data, (eg. from nil objects).
	
	* src/cairo-font.c:	
	(cairo_scaled_font_extents), (cairo_scaled_font_glyph_extents):
	* src/cairo-pattern.c::	
	(cairo_pattern_create_rgb), (cairo_pattern_create_rgba):
	* src/cairo-surface.c:
	(cairo_surface_flush), (cairo_surface_mark_dirty_rectangle),
	(cairo_surface_set_device_offset):