@@ -1,3 +1,14 @@
+2005-08-20  Billy Biggs  <vektor@dumbterm.net>
+
+	Fix for bug #4096:
+
+	* src/cairo-png.c: (multiply_alpha), (premultiply_data): Improve
+	the performance of png reading by adding special cases for fully
+	transparent and fully opaque alpha, and using the standard
+	optimization for 8-bit division by 255.
+
+	* src/cairoint.h: Add an INLINE macro for gcc.
+
 2005-08-19  Carl Worth  <cworth@cworth.org>
 
 	From Bertram Felgenhauer <int-e@gmx.de>:
